tests/baselines/reference/parservoidInQualifiedName2.errors.txt
tests/cases/conformance/parser/ecmascript5/parservoidInQualifiedName2.ts(1,9): error TS2503: Cannot find namespace 'x'.


==== tests/cases/conformance/parser/ecmascript5/parservoidInQualifiedName2.ts (1 errors) ====
    var v : x.void;
            ~
!!! error TS2503: Cannot find namespace 'x'.